[gd_scene load_steps=8 format=3 uid="uid://bms2xdvgvryw5"]

[ext_resource type="Texture2D" uid="uid://d1klmxrava7pp" path="res://assets/flare.png" id="1_3npih"]
[ext_resource type="Script" uid="uid://dc2y7asy3xtxd" path="res://scripts/flare.gd" id="1_klg6k"]
[ext_resource type="Texture2D" uid="uid://bn16mnhtt87jt" path="res://assets/point_light.png" id="3_4qifi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1tvlc"]
size = Vector2(1.4142139, 6.535535)

[sub_resource type="Animation" id="Animation_snp8f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PointLight2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}

[sub_resource type="Animation" id="Animation_76ndk"]
resource_name = "ignite"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PointLight2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.21022403, 0.21022403),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(3, 3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t0o0f"]
_data = {
&"RESET": SubResource("Animation_snp8f"),
&"ignite": SubResource("Animation_76ndk")
}

[node name="Flare" type="CharacterBody2D"]
script = ExtResource("1_klg6k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.18933976, 0.18933976)
rotation = 0.7853982
scale = Vector2(0.9999998, 0.9999998)
shape = SubResource("RectangleShape2D_1tvlc")
disabled = true

[node name="Flare" type="Sprite2D" parent="."]
scale = Vector2(0.2, 0.2)
texture = ExtResource("1_3npih")

[node name="AliveTime" type="Timer" parent="."]
wait_time = 40.0
one_shot = true
autostart = true

[node name="ThrowTime" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
autostart = true

[node name="PointLight2D" type="PointLight2D" parent="."]
scale = Vector2(1e-05, 1e-05)
enabled = false
color = Color(1, 0.5882353, 0.54901963, 0.78431374)
blend_mode = 2
shadow_enabled = true
shadow_filter = 1
shadow_item_cull_mask = 3
texture = ExtResource("3_4qifi")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_t0o0f")
}

[connection signal="timeout" from="AliveTime" to="." method="_on_alive_time_timeout"]
[connection signal="timeout" from="ThrowTime" to="." method="_on_throw_time_timeout"]
